[workspace]
members = [
  "uniffi_bindgen",
  "uniffi_build",
  "uniffi_core",
  "uniffi_macros",
  "uniffi_meta",
  "uniffi_testing",
  "uniffi_udl",
  "uniffi",
  "weedle2",

  "examples/app/uniffi-bindgen-cli",
  "examples/arithmetic",
  "examples/arithmetic-procmacro",
  "examples/async-api-client",
  "examples/callbacks",
  "examples/custom-types",
  "examples/futures",
  "examples/geometry",
  "examples/rondpoint",
  "examples/sprites",
  "examples/todolist",
  "examples/traits",

  "fixtures/benchmarks",
  "fixtures/coverall",
  "fixtures/callbacks",
  "fixtures/error-types",

  "fixtures/ext-types/custom-types",
  "fixtures/ext-types/http-headermap",
  "fixtures/ext-types/uniffi-one",
  "fixtures/ext-types/lib",
  "fixtures/ext-types/proc-macro-lib",
  "fixtures/ext-types/sub-lib",

  "fixtures/docstring",
  "fixtures/docstring-proc-macro",
  "fixtures/keywords/kotlin",
  "fixtures/keywords/rust",
  "fixtures/keywords/swift",
  "fixtures/metadata",
  "fixtures/proc-macro",
  "fixtures/proc-macro-no-implicit-prelude",
  "fixtures/regressions/enum-without-i32-helpers",
  "fixtures/regressions/fully-qualified-types",
  "fixtures/regressions/kotlin-experimental-unsigned-types",
  "fixtures/regressions/cdylib-crate-type-dependency/ffi-crate",
  "fixtures/regressions/cdylib-crate-type-dependency/cdylib-dependency",
  "fixtures/regressions/logging-callback-interface",
  "fixtures/regressions/missing-newline",
  "fixtures/regressions/swift-callbacks-omit-labels",
  "fixtures/regressions/swift-dictionary-nesting",
  "fixtures/regressions/unary-result-alias",
  "fixtures/regressions/wrong-lower-check",
  "fixtures/trait-methods",
  "fixtures/uitests",
  "fixtures/uniffi-fixture-time",
  "fixtures/version-mismatch",
  "fixtures/simple-fns",
  "fixtures/simple-iface",
  "fixtures/struct-default-values",
  "fixtures/swift-omit-labels",
  "fixtures/futures",
  "fixtures/swift-bridging-header-compile",
  "fixtures/type-limits",
  "fixtures/large-enum",
  "fixtures/large-error",
  "fixtures/enum-types",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-compat = "0.2.1"
async-trait = "0.1"
bincode = "1.3"
bytes = "1.3"
camino = "1.0.8"
cargo_metadata = "0.15"
chrono = { version = "0.4.23", default-features = false }
clap = "4"
fs-err = "2.7.0"
futures = "0.3"
glob = "0.3"
goblin = "0.8"
heck = "0.5"
http = "1.1"
lazy_static = "1.4"
log = "0.4"
nom = "7.1.0"
once_cell = "1.12"
paste = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
rinja = { version = "0.3", default-features = false }
serde = "1"
siphasher = "0.3"
static_assertions = "1.1.0"
syn = "2.0"
textwrap = {  version = "0.16", default-features = false }
thiserror = "1.0"
tokio = { version = "1.24.1" }
toml = "0.5"
uniffi = { path = "./uniffi", version = "0.28" }
uniffi_bindgen = { path = "./uniffi_bindgen", version = "=0.28.2", default-features = false }
uniffi_build = { path = "./uniffi_build", version = "=0.28.2" }
uniffi_checksum_derive = { path = "./uniffi_checksum_derive", version = "0.28.2" }
uniffi_core = { path = "./uniffi_core", version = "=0.28.2" }
uniffi_macros = { path = "./uniffi_macros", version = "=0.28.2" }
uniffi_meta = { path = "./uniffi_meta", version = "=0.28.2" }
uniffi_testing = { path = "./uniffi_testing", version = "=0.28.2" }
uniffi_udl = { path = "./uniffi_udl", version = "=0.28.2" }
url = "2.2"
weedle2 = {  path = "./weedle2", version = "5.0.0" }