[workspace]
members = [
  "uniffi_bindgen",
  "uniffi_build",
  "uniffi_core",
  "uniffi_macros",
  "uniffi_meta",
  "uniffi_pipeline",
  "uniffi_testing",
  "uniffi_udl",
  "uniffi",
  "weedle2",

  "examples/app/uniffi-bindgen-cli",
  "examples/arithmetic",
  "examples/arithmetic-procmacro",
  "examples/async-api-client",
  "examples/callbacks",
  "examples/custom-types",
  "examples/futures",
  "examples/geometry",
  "examples/remote-types",
  "examples/rondpoint",
  "examples/sprites",
  "examples/todolist",
  "examples/traits",

  "fixtures/benchmarks",
  "fixtures/coverall",
  "fixtures/callbacks",
  "fixtures/error-types",

  "fixtures/ext-types/custom-types",
  "fixtures/ext-types/http-headermap",
  "fixtures/ext-types/uniffi-one",
  "fixtures/ext-types/lib",
  "fixtures/ext-types/proc-macro-lib",
  "fixtures/ext-types/sub-lib",

  "fixtures/docstring",
  "fixtures/docstring-proc-macro",
  "fixtures/gh-2600",
  "fixtures/keywords/kotlin",
  "fixtures/keywords/rust",
  "fixtures/keywords/swift",
  "fixtures/metadata",
  "fixtures/proc-macro",
  "fixtures/proc-macro-no-implicit-prelude",
  "fixtures/regressions/enum-without-i32-helpers",
  "fixtures/regressions/fully-qualified-types",
  "fixtures/regressions/kotlin-experimental-unsigned-types",
  "fixtures/regressions/cdylib-crate-type-dependency/ffi-crate",
  "fixtures/regressions/cdylib-crate-type-dependency/cdylib-dependency",
  "fixtures/regressions/logging-callback-interface",
  "fixtures/regressions/missing-newline",
  "fixtures/regressions/swift-callbacks-omit-labels",
  "fixtures/regressions/swift-dictionary-nesting",
  "fixtures/regressions/unary-result-alias",
  "fixtures/regressions/wrong-lower-check",
  "fixtures/rename",
  "fixtures/trait-methods",
  "fixtures/uitests",
  "fixtures/uniffi-fixture-time",
  "fixtures/version-mismatch",
  "fixtures/simple-fns",
  "fixtures/simple-iface",
  "fixtures/struct-default-values",
  "fixtures/swift-codable",
  "fixtures/swift-omit-labels",
  "fixtures/futures",
  "fixtures/swift-bridging-header-compile",
  "fixtures/swift-link-frameworks",
  "fixtures/type-limits",
  "fixtures/large-enum",
  "fixtures/large-error",
  "fixtures/enum-types",
  "fixtures/wasm-unstable-single-threaded",
]

resolver = "2"

[workspace.dependencies]
uniffi = { path = "./uniffi", version = "0.29" }
