[package]
name = "bindings-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.0"
camino = "1.0.8"
heck = "0.4"
once_cell = "1"
regex = "1"
render-macro = { path = "../render-macro" }
paste = "1"
serde = { version = "1", features=["derive"] }
tera = { version = "1", default-features = false }
