[package]
name = "multi-pass-generation-prototype"
version = "0.1.0"
authors = ["Ben Dean-Kawamura <ben@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tera = "1"
