[package]
name = "uniffi"
description = "a multi-language bindings generator for rust"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
# Incrementing the minor version here means a breaking change to consumers.
#   * See `docs/uniffi-versioning.md` for guidance on when to increment this
#   * Make sure to also update `uniffi_bindgen::UNIFFI_CONTRACT_VERSION"
version = "0.23.0"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]

[dependencies]
uniffi_bindgen = { path = "../uniffi_bindgen", version = "=0.23.0", optional = true }
uniffi_build = { path = "../uniffi_build", version = "=0.23.0", optional = true }
uniffi_core = { path = "../uniffi_core", version = "=0.23.0" }
uniffi_macros = { path = "../uniffi_macros", version = "=0.23.0" }
anyhow = "1"
camino = { version = "1.0.8", optional = true }
clap = { version = "3.1", features = ["cargo", "std", "derive"], optional = true }

[dev-dependencies]
trybuild = "1"

[features]
default = []
# Support for features needed by the `build.rs` script. Enable this in your
# `build-dependencies`.
build = [ "dep:uniffi_build" ]
# Support for `uniffi_bindgen::{generate_bindings, generate_component_scaffolding}`.
# Enable this feature for your `uniffi-bindgen` binaries if you don't need the full CLI.
bindgen = ["dep:uniffi_bindgen"]
# Support for `uniffi_bindgen_run_main()`. Enable this feature for your
# `uniffi-bindgen` binaries.
cli = [ "bindgen", "dep:clap", "dep:camino" ]
# Support for running example/fixture tests for `uniffi-bindgen`.  You probably
# don't need to enable this.
bindgen-tests = [ "dep:uniffi_bindgen" ]
