[package]
name = "uniffi_bindgen"
version = "0.29.1"
description = "a multi-language bindings generator for rust (codegen and cli tooling)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[features]
default = ["cargo-metadata"]
cargo-metadata = ["dep:cargo_metadata"]
bindgen-tests = ["cargo-metadata", "dep:uniffi_testing"]
ffi-trace = ["uniffi_testing?/ffi-trace"]

[dependencies]
anyhow = "1"
rinja = { version = "0.3.4", default-features = false, features = ["config"] }
camino = "1.0.8"
cargo_metadata = { version = "0.15", optional = true }
fs-err = "2.7.0"
glob = "0.3"
goblin = "0.8"
heck = "0.5"
once_cell = "1.12"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
uniffi_meta = { path = "../uniffi_meta", version = "=0.29.1" }
uniffi_testing = { path = "../uniffi_testing", version = "=0.29.1", optional = true }
uniffi_udl = { path = "../uniffi_udl", version = "=0.29.1" }
# Don't include the `unicode-linebreak` or `unicode-width` since that functionality isn't needed for
# docstrings.
textwrap = { version = "0.16", features=["smawk"], default-features = false }
