[package]
name = "uniffi_build"
version = "0.28.2"
description = "a multi-language bindings generator for rust (build script helpers)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
uniffi_bindgen = { workspace = true }

[features]
default = []
# Deprecated feature that doesn't do anything anymore, but we still allow for backwards-compatibility.
builtin-bindgen = []
