[package]
name = "uniffi_checksum_derive"
version = "0.28.2"
description = "a multi-language bindings generator for rust (checksum custom derive)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["derive", "parsing"] }

[features]
default = []
nightly = []
