[package]
name = "uniffi_core"
description = "a multi-language bindings generator for rust (runtime support code)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
version = "0.28.2"
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[dependencies]
# Re-exported dependencies used in generated Rust scaffolding files.
anyhow = { workspace = true }
async-compat = { workspace = true, optional = true }
bytes = { workspace = true }
once_cell ={ workspace = true }
# Regular dependencies
paste = { workspace = true }
static_assertions = { workspace = true }

[features]
default = []

# Printout tracing information on FFI calls.  Useful for debugging issues with the bindings code.
ffi-trace = []

# Enable support for Tokio's futures.
# This must still be opted into on a per-function basis using `#[uniffi::export(async_runtime = "tokio")]`.
tokio = ["dep:async-compat"]

# Enable support for the ffi buffer scaffolding functions
scaffolding-ffi-buffer-fns = []
