[package]
name = "uniffi_core"
description = "a multi-language bindings generator for rust (runtime support code)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
version = "0.28.3"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[dependencies]
# Re-exported dependencies used in generated Rust scaffolding files.
anyhow = "1"
async-compat = { version = "0.2.1", optional = true }
bytes = "1.3"
log = "0.4"
once_cell = "1.10.0"
# Regular dependencies
paste = "1.0"
static_assertions = "1.1.0"

[features]
default = []

# Enable support for Tokio's futures.
# This must still be opted into on a per-function basis using `#[uniffi::export(async_runtime = "tokio")]`.
tokio = ["dep:async-compat"]

# Enable support for the ffi buffer scaffolding functions
scaffolding-ffi-buffer-fns = []
