[package]
name = "uniffi_core"
description = "a multi-language bindings generator for rust (runtime support code)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
version = "0.29.1"
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[dependencies]
# Re-exported dependencies used in generated Rust scaffolding files.
anyhow = "1"
async-compat = { version = "0.2.1", optional = true }
bytes = "1.3"
once_cell = "1.10.0"
static_assertions = "1.1.0"

[features]
default = []

# Printout tracing information on FFI calls.  Useful for debugging issues with the bindings code.
ffi-trace = []

# Enable support for Tokio's futures.
# This must still be opted into on a per-function basis using `#[uniffi::export(async_runtime = "tokio")]`.
tokio = ["dep:async-compat"]

# Enable support for the ffi buffer scaffolding functions
scaffolding-ffi-buffer-fns = []

# Support for WebAssembly targets in a single-threaded environment.
# This feature is unstable and may change in the future.
wasm-unstable-single-threaded = []

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
