[package]
name = "uniffi_docs"
version = "0.23.0"
edition = "2021"
description = "uniffi_meta"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/eigerco/uniffi-rs"
license = "MPL-2.0"
keywords = ["ffi", "bindgen", "docs"]

[dependencies]
anyhow = "1"
camino = "1.0.8"
syn = { version = "1.0", features = ["full"] }