[package]
name = "uniffi_docs"
version = "0.25.0"
edition = "2021"
description = "uniffi_meta"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/eigerco/uniffi-rs"
license = "MPL-2.0"
keywords = ["ffi", "bindgen", "docs"]

[dependencies]
anyhow = "1"
syn = { version = "1.0", features = ["full"] }
pulldown-cmark = { version = "0.9.2"}
uniffi_meta = { path = "../uniffi_meta", version = "=0.25.0" }

[dev-dependencies]
indoc = "2"
quote = "1.0.23"
