[package]
name = "uniffi_internal_macros"
version = "0.31.0"
description = "a multi-language bindings generator for rust (interal macro crate)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
indexmap = { version = "2.2" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut", "extra-traits"] }

[features]
default = []
nightly = []

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
