[package]
name = "uniffi_macros"
version = "0.26.1"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
description = "a multi-language bindings generator for rust (convenience macros)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
bincode = "1.3"
camino = "1.0.8"
fs-err = "2.7.0"
once_cell = "1.10.0"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0.136"
syn = { version = "2.0", features = ["full", "visit-mut"] }
toml = "0.5.9"
uniffi_build = { path = "../uniffi_build", version = "=0.26.1" }
uniffi_meta = { path = "../uniffi_meta", version = "=0.26.1" }

[features]
default = []
# Enable extra features that require a nightly compiler:
# * Add the full module path of exported items to FFI metadata instead of just the crate name.
#   This may be used by language backends to generate nested module structures in the future.
nightly = []
