[package]
name = "uniffi_macros"
version = "0.28.2"
description = "a multi-language bindings generator for rust (convenience macros)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
bincode = { workspace = true }
camino = { workspace = true }
fs-err = { workspace = true }
once_cell = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
syn = { workspace = true, features = ["full", "visit-mut"] }
toml = { workspace = true }
uniffi_build = { workspace = true, optional = true }
uniffi_meta = { workspace = true }

[features]
default = []
# Enable the generate_and_include_scaffolding! macro
trybuild = [ "dep:uniffi_build" ]
# Generate extra scaffolding functions that use FfiBuffer to pass arguments and return values
scaffolding-ffi-buffer-fns = []
# Enable extra features that require a nightly compiler:
# * Add the full module path of exported items to FFI metadata instead of just the crate name.
#   This may be used by language backends to generate nested module structures in the future.
nightly = []
