[package]
name = "uniffi_meta"
version = "0.28.2"
edition = "2021"
description = "uniffi_meta"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
siphasher = { workspace = true }
uniffi_checksum_derive = { workspace = true }
