[package]
name = "uniffi_meta"
version = "0.28.3"
edition = "2021"
description = "uniffi_meta"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[dependencies]
anyhow = "1"
bytes = "1.3"
siphasher = "0.3"
uniffi_internal_macros = { version = "0.28.3", path = "../uniffi_internal_macros" }
