[package]
name = "uniffi_meta"
version = "0.29.1"
edition = "2021"
description = "uniffi_meta"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[dependencies]
anyhow = "1"
siphasher = "0.3"
uniffi_internal_macros = { version = "0.29.1", path = "../uniffi_internal_macros" }
uniffi_pipeline = { version = "0.29.1", path = "../uniffi_pipeline" }

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
