[package]
name = "uniffi_pipeline"
version = "0.29.1"
description = "a multi-language bindings generator for rust (codegen and cli tooling)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[dependencies]
anyhow = "1"
heck = "0.5"
indexmap = { version = "2.2" }
tempfile = "3"
uniffi_internal_macros = { path = "../uniffi_internal_macros", version = "=0.29.1" }
