[package]
name = "uniffi_testing"
version = "0.3.2+v0.25.0"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
description = "a multi-language bindings generator for rust (testing helpers)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1"
camino = "1.0.8"
cargo_metadata = "0.15"
fs-err = "2.7.0"
once_cell = "1.12"
