[package]
name = "uniffi_testing"
version = "0.28.2"
description = "a multi-language bindings generator for rust (testing helpers)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
edition = "2021"
license = "MPL-2.0"
readme = "../README.md"

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
cargo_metadata = { workspace = true }
fs-err = { workspace = true }
once_cell = { workspace = true }

[features]
ffi-trace = []
